// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty form 1`] = `
<form
  id="edit-entry-form"
>
  <div
    class="form"
  >
    <div
      class="form-row"
    >
      <div
        class="form-row-input description"
      >
        <input
          placeholder="Description"
          type="text"
          value=""
        />
      </div>
      <div
        class="form-row-input transaction-type"
      >
        <select>
          <option
            value="SHARED"
          >
            Shared
          </option>
          <option
            value="DIRECT"
          >
            Direct
          </option>
        </select>
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-row-input"
      >
        <div
          class="form-row-input date-input"
        >
          <button
            class="selected"
            type="button"
          >
            today
          </button>
          <button
            class=""
            type="button"
          >
            yesterday
          </button>
          <input
            type="date"
            value="2020-02-20"
          />
        </div>
      </div>
    </div>
    <div
      class="form-row"
      style="display: none;"
    >
      <div
        class="direct-transaction"
      >
        <div
          class="form-row"
          style="display: none;"
        >
          <div
            class="form-row-input"
          >
            <select
              class="full-width"
            >
              <option
                value="NEW_PARTICIPANT"
              >
                New participant…
              </option>
            </select>
          </div>
        </div>
        <div
          class="form-row"
        >
          <div
            class="form-row-input"
          >
            <input
              placeholder="Name …"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="direct-transaction-amount"
        >
          <svg
            height="16"
            width="16"
          >
            <path
              d="m15.511 8.5129c0-0.8974-1.0909-1.3404-1.7168-0.6973l-4.7832 4.7837v-11.573c0.019125-1.3523-2.0191-1.3523-2 0v11.572l-4.7832-4.7832c-0.94251-0.98163-2.3957 0.47155-1.4141 1.4141l6.49 6.4911c0.3878 0.387 1.0228 0.391 1.414 0l6.4903-6.4906c0.1935-0.1883 0.30268-0.4468 0.3027-0.7168z"
            />
          </svg>
          <input
            placeholder="0"
            step="any"
            type="number"
            value=""
          />
        </div>
        <div
          class="form-row"
          style="display: none;"
        >
          <div
            class="form-row-input"
          >
            <select
              class="full-width"
            >
              <option
                value="NEW_PARTICIPANT"
              >
                New participant…
              </option>
            </select>
          </div>
        </div>
        <div
          class="form-row"
        >
          <div
            class="form-row-input"
          >
            <input
              placeholder="Name …"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="form-row"
      >
        <div
          class="form-row-input"
        >
          <div
            class="newParticipantInput selected"
          >
            <span
              class="participant"
            >
              <input
                placeholder="Name …"
                type="text"
                value=""
              />
            </span>
            <span
              class="participationStatus"
            >
              <span
                class="joinedButtonWrapper"
              >
                <button
                  class=" selected"
                  type="button"
                >
                  joined
                </button>
              </span>
              <button
                class="paid-button"
                type="button"
              >
                paid
              </button>
              <span
                class="amountInput hidden"
              >
                <input
                  disabled=""
                  placeholder="0"
                  step="any"
                  type="number"
                  value=""
                />
              </span>
            </span>
          </div>
          <div
            class="newParticipantInput selected"
          >
            <span
              class="participant"
            >
              <input
                placeholder="Name …"
                type="text"
                value=""
              />
            </span>
            <span
              class="participationStatus"
            >
              <span
                class="joinedButtonWrapper"
              >
                <button
                  class=" selected"
                  type="button"
                >
                  joined
                </button>
              </span>
              <button
                class="paid-button"
                type="button"
              >
                paid
              </button>
              <span
                class="amountInput hidden"
              >
                <input
                  disabled=""
                  placeholder="0"
                  step="any"
                  type="number"
                  value=""
                />
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-row-input"
        >
          <button
            type="button"
          >
            + new participant
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  />
</form>
`;

exports[`renders prefilled form 1`] = `
<form
  id="edit-entry-form"
>
  <div
    class="form"
  >
    <div
      class="form-row"
    >
      <div
        class="form-row-input description"
      >
        <input
          placeholder="Description"
          type="text"
          value="DESCRIPTION"
        />
      </div>
      <div
        class="form-row-input transaction-type"
      >
        <select>
          <option
            value="SHARED"
          >
            Shared
          </option>
          <option
            value="DIRECT"
          >
            Direct
          </option>
        </select>
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-row-input"
      >
        <div
          class="form-row-input date-input"
        >
          <button
            class=""
            type="button"
          >
            today
          </button>
          <button
            class=""
            type="button"
          >
            yesterday
          </button>
          <input
            type="date"
            value="2020-03-24"
          />
        </div>
      </div>
    </div>
    <div
      class="form-row"
      style="display: none;"
    >
      <div
        class="direct-transaction"
      >
        <div
          class="form-row"
        >
          <div
            class="form-row-input"
          >
            <select
              class="full-width"
            >
              <option>
                Martin
              </option>
              <option>
                Jan
              </option>
              <option
                value="NEW_PARTICIPANT"
              >
                New participant…
              </option>
            </select>
          </div>
        </div>
        <div
          class="form-row"
          style="display: none;"
        >
          <div
            class="form-row-input"
          >
            <input
              placeholder="Name …"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="direct-transaction-amount"
        >
          <svg
            height="16"
            width="16"
          >
            <path
              d="m15.511 8.5129c0-0.8974-1.0909-1.3404-1.7168-0.6973l-4.7832 4.7837v-11.573c0.019125-1.3523-2.0191-1.3523-2 0v11.572l-4.7832-4.7832c-0.94251-0.98163-2.3957 0.47155-1.4141 1.4141l6.49 6.4911c0.3878 0.387 1.0228 0.391 1.414 0l6.4903-6.4906c0.1935-0.1883 0.30268-0.4468 0.3027-0.7168z"
            />
          </svg>
          <input
            placeholder="0"
            step="any"
            type="number"
            value=""
          />
        </div>
        <div
          class="form-row"
        >
          <div
            class="form-row-input"
          >
            <select
              class="full-width"
            >
              <option>
                Martin
              </option>
              <option>
                Jan
              </option>
              <option
                value="NEW_PARTICIPANT"
              >
                New participant…
              </option>
            </select>
          </div>
        </div>
        <div
          class="form-row"
          style="display: none;"
        >
          <div
            class="form-row-input"
          >
            <input
              placeholder="Name …"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="form-row"
      >
        <div
          class="form-row-input"
        >
          <div
            class="participantInput selected paid"
          >
            <span
              class="participant"
            >
              Martin
            </span>
            <span
              class="participationStatus"
            >
              <span
                class="joinedButtonWrapper hidden"
              >
                <button
                  class=" selected"
                  type="button"
                >
                  joined
                </button>
              </span>
              <button
                class="paid-button selected"
                type="button"
              >
                paid
              </button>
              <span
                class="amountInput"
              >
                <input
                  placeholder="0"
                  step="any"
                  type="number"
                  value="5"
                />
              </span>
            </span>
          </div>
          <div
            class="participantInput selected"
          >
            <span
              class="participant"
            >
              Jan
            </span>
            <span
              class="participationStatus"
            >
              <span
                class="joinedButtonWrapper"
              >
                <button
                  class=" selected"
                  type="button"
                >
                  joined
                </button>
              </span>
              <button
                class="paid-button"
                type="button"
              >
                paid
              </button>
              <span
                class="amountInput hidden"
              >
                <input
                  disabled=""
                  placeholder="0"
                  step="any"
                  type="number"
                  value=""
                />
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-row-input"
        >
          <button
            type="button"
          >
            + new participant
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row button-row"
  >
    <span
      class="fake-link delete"
    >
      Delete transaction
    </span>
  </div>
</form>
`;
